# file

./: .gitignore  main.py  pyproject.toml
faiss_index_local/: index.faiss  index.pkl
faiss_index_streamlit/: index.faiss  index.pkl
